# Igor.KV

./: CMakeLists.txt  Sorts.cpp  classes.h  darts.cpp  darts.h  dartsio.cpp  main.cpp
calculator/: main.cpp
calculator/src/: .solver.cpp.swp  .solver.h.swp  solver.cpp  solver.h
